[package]
name = "ws-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
hdrhistogram = "7.5"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
